loader wasn't centered on ios. i'm assuming what i've done has fixed it since i'm not using percentages anymore but center classes

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -440,6 +440,12 @@ body {
   }
 }
 
+.custom-h100 {
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (min-width: 768px) {
   li {
     font-size: 16px;
